[tool.poetry]
name = "with-ai-agents"
version = "0.2.0"
description = "With-AI-Agents 是一个基于基本原理实现的 AI Agents（智能体），拥有联网搜索能力、页面内容提取并学习回答等功能"
authors = ["yejue <1145331931@qq.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.20.0"
beautifulsoup4 = "*"
pydantic = ">=2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
homepage = "https://github.com/yejue/with-ai-agents"
repository = "https://github.com/yejue/with-ai-agents"